# GNBasicProject

./: BUILD.gn  DEPS
buildtools/win/.versions/: gn.exe.cipd_version
src/hello_console/: BUILD.gn  main.c
src/hello_lib/: BUILD.gn  hello_lib.cpp  hello_lib.h  test_hello_lib.cpp
src/hello_win/: BUILD.gn  main.cpp
