static_library("hello_lib") {
  sources = [
    "hello_lib.h",
    "hello_lib.cpp",
  ]
}

executable("test_hello_lib") {
  sources = [
    "test_hello_lib.cpp",
  ]
  deps = [
    ":hello_lib",
  ]
  configs += [
    "//build/config/win:common_linker_setup",
    "//build/config/win:static_crt",
    "//third_party/googletest:googletest",
    "//third_party/googletest:googletest-main",
  ]
}
