# import("//build/config/precompiled_header.gni")
# import("//build/config/compiler.gni")
# import("//build/config/win/BUILD.gn")
# precompiled_header("hello_pch") {
#   precompiled_header = "precompile.h"
#   precompiled_source = "//precompile.cc"
# }
config("user32") {
  libs = [ "user32.lib"]
}

executable("hello_win") {
  sources = [
    "main.cpp",
  ]

  # See https://github.com/timniederhausen/gn-build/blob/testsrc/BUILD.gn
  #
  # configs += [ ":hello_pch" ]
  # deps = [
  #   ":hello_shared",
  #   ":hello_static",
  # ]

  configs += [ 
    "//build/config/win:windowed",
    "//build/config/win:unicode",
    "//build/config/win:sdk_link",
    "//build/config/win:common_linker_setup",
    "//build/config/win:static_crt",
    ":user32"
    # "//build/config:default_libs",
    # "//build/config/win:lean_and_mean",
    # "//build/config/win:default_crt",
    # "//build/config/win:default_crt",
    # "//build/config/win:lean_and_mean",
    # ":windowed", ":default_crt", ":lean_and_mean" 
    # "//build/config/compiler:runtime_library"
  ]

  # libs += [ "user32.lib" ]
}

